bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q8 (Optimized, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: vendor, ENC_PT(cheapExpensiveRatio) AS cheapExpensiveRatio
  Sort: AS_SORTABLE_BYTES(DIV(xsd:float(belowAvg), offerCount)) DESC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(vendor)) ASC NULLS FIRST, fetch=10
    DecodeObjectIds: columns=[vendor]
      Projection: vendor, belowAvg, offerCount, DIV(xsd:float(belowAvg), offerCount) AS cheapExpensiveRatio
        Projection: lhs.vendor AS vendor, lhs.belowAvg AS belowAvg, rhs.offerCount AS offerCount
          Projection: lhs.vendor, lhs.belowAvg, rhs.vendor, rhs.offerCount
            Inner Join: lhs.vendor = rhs.vendor
              SubqueryAlias: lhs
                Projection: vendor, belowAvg
                  Projection: vendor, <uuid>, <uuid> AS belowAvg
                    Aggregate: groupBy=[[vendor AS vendor]], aggr=[[COUNT(offer) AS <uuid>]]
                      DecodeObjectIds: columns=[offer]
                        Filter: EBV(LT(xsd:float(xsd:string(ENC_TF(price))), avgPrice))
                          DecodeObjectIds: columns=[price]
                            Projection: lhs.product AS product, lhs.offer AS offer, lhs.vendor AS vendor, lhs.price AS price, rhs.avgPrice AS avgPrice
                              Inner Join: lhs.product = rhs.product
                                SubqueryAlias: lhs
                                  BasicGraphPattern: 
                                    QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>]
                                    QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product]
                                    QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor]
                                    QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price]
                                SubqueryAlias: rhs
                                  Projection: product, avgPrice
                                    Projection: product, <uuid>, <uuid> AS avgPrice
                                      Aggregate: groupBy=[[product AS product]], aggr=[[AVG(xsd:float(xsd:string(ENC_TF(price)))) AS <uuid>]]
                                        BasicGraphPattern: columns_to_decode=[price], 
                                          QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>]
                                          QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product]
                                          QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor]
                                          QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price]
              SubqueryAlias: rhs
                Projection: vendor, offerCount
                  Projection: vendor, <uuid>, <uuid> AS offerCount
                    Aggregate: groupBy=[[vendor AS vendor]], aggr=[[COUNT(offer) AS <uuid>]]
                      BasicGraphPattern: columns_to_decode=[offer], 
                        QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>]
                        QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product]
                        QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor]
