bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q8 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(vendor) AS vendor, ENC_PT(cheapExpensiveRatio) AS cheapExpensiveRatio
  Sort: AS_SORTABLE_BYTES(DIV(xsd:float(belowAvg), offerCount)) DESC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(vendor))) ASC NULLS FIRST, fetch=10
    Projection: lhs.vendor AS vendor, lhs.belowAvg AS belowAvg, rhs.offerCount AS offerCount, DIV(xsd:float(lhs.belowAvg), rhs.offerCount) AS cheapExpensiveRatio
      Inner Join: lhs.vendor = rhs.vendor
        SubqueryAlias: lhs
          Projection: vendor, <uuid> AS belowAvg
            Aggregate: groupBy=[[vendor AS vendor]], aggr=[[COUNT(offer) AS <uuid>]]
              Projection: lhs.offer AS offer, lhs.vendor AS vendor
                LeftSemi Join: lhs.product = rhs.product Filter: EBV(LT(xsd:float(xsd:string(ENC_TF(ENC_PT(lhs.price)))), rhs.avgPrice))
                  SubqueryAlias: lhs
                    BasicGraphPattern: 
                      QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>]
                      QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product]
                      QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor]
                      QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price]
                  SubqueryAlias: rhs
                    Projection: product, <uuid> AS avgPrice
                      Aggregate: groupBy=[[product AS product]], aggr=[[AVG(xsd:float(xsd:string(ENC_TF(ENC_PT(price))))) AS <uuid>]]
                        BasicGraphPattern: projection=[product, price], 
                          QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>]
                          QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product]
                          QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], projection=[0]
                          QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price]
        SubqueryAlias: rhs
          Projection: vendor, <uuid> AS offerCount
            Aggregate: groupBy=[[vendor AS vendor]], aggr=[[COUNT(offer) AS <uuid>]]
              BasicGraphPattern: projection=[offer, vendor], 
                QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>]
                QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product]
                QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor]
